--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <title>Tic-tac-toe</title>
 </head>
 <body>
-  
+  <div class="game-board">
+    
+  </div>
+  <div class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <div class="result"></div>
+      <button class="new-game">New Game</button>
+    </div>
+  </div>
 </body>
 </html>
