--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
   <title>Tic-tac-toe</title>
 </head>
 <body>
-  <div class="game-board">
+  <div class="header">
+    <h1>Tic-tac-toe</h1>
+    <p>Would you like to play a game?</p>
     
+  </div>
+  <div class="main">
+    <div class="game-board"></div>
   </div>
   <div class="modal">
     <div class="modal-content">
-      <span class="close">&times;</span>
       <div class="result"></div>
       <button class="new-game">New Game</button>
     </div>
